--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ruthmichaela.gitlab.io/ruts/"
+baseURL = "https://ruthmichaela.github.io/ruts/"
 languageCode = "en-us"
 title = "RÜTS"
 pluralizeListTitles = false
