- Prevent FOIT - Add copyright, site description - Enable RSS - Remove unnecessary `author` and `draft: false` attributes from front matter - Optimized video cover - Page-specific titles - OpenGraph meta - Preload fonts - Improved semantics with `main`, `article`, and `nav` tags - Fixed missing `alt` attributes - Fixed responsive image `srcset`

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,12 @@ baseURL = ""
 languageCode = "en-us"
 title = "RÜTS"
 pluralizeListTitles = false
-disableKinds = [ "RSS" ]
+disableKinds = [ ]
 summaryLength = 40
 enableRobotsTXT = true
 paginate = 10
+copyright = "All rights reserved."
+
+[params]
+  description = "Site description here."
+  author = "Ruth Reyer"
